@@ -1,3 +1,4 @@
+	* report errors in read_piece_alert
 	* DHT memory optimization
 	* improve DHT lookup speed
 	* improve support for windows XP and earlier
